[gd_scene load_steps=15 format=2]

[ext_resource path="res://weapon/rpg/rpg muzzle flash.png" type="Texture" id=1]
[ext_resource path="res://weapon/rpg/rpg.png" type="Texture" id=2]
[ext_resource path="res://weapon/pistol/Stat.gd" type="Script" id=3]
[ext_resource path="res://weapon/rpg/RPG.gd" type="Script" id=4]
[ext_resource path="res://weapon/rpg/rpg empty.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "empty",
"speed": 12.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "recoilL"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -4, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.025, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "recoilR"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -4, 2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.025, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, 0.0 ]
}

[node name="RPG" type="Node2D"]
script = ExtResource( 4 )

[node name="Stat" type="Node" parent="."]
script = ExtResource( 3 )
dmg = 20.0

[node name="Timer" type="Timer" parent="."]

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 33, 0 )

[node name="Rockets" type="Node" parent="Muzzle"]

[node name="MuzzleFlash" type="AnimatedSprite" parent="Muzzle"]
visible = false
position = Vector2( 5, 0 )
rotation = 1.5708
frames = SubResource( 4 )
frame = 4

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -21, -9 )
z_index = 1
frames = SubResource( 3 )
playing = true
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/recoilL = SubResource( 1 )
anims/recoilR = SubResource( 2 )
[connection signal="timeout" from="Timer" to="." method="_on_Cooldown_timeout"]
[connection signal="animation_finished" from="Muzzle/MuzzleFlash" to="." method="_on_MuzzleFlash_animation_finished"]
